--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NYTimes-News-Feed</string>
+    <string name="retry">Coba Lagi</string>
+    <string name="search_hint">Pencarian</string>
+
 </resources>
